Added new photo, updated the blog image, updated the imgage class

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="column">
         <!-- The section populates the photo from the source-->
         <center>
-          <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Femotionstudios.net%2Ftech%2Ftop-3-most-common-wordpress-errors%2F&psig=AOvVaw2EU4YwYNpfUcE_Hx1BN3QI&ust=1694123481635000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCJiNgPf7loEDFQAAAAAdAAAAABAT" target="_blank"><img class="image" src="./images/error.webp" alt="A bug" /></center></a>
+          <img class="image" src="./images/danial.png" alt="My Photo" /></center></a>
         </center>
       </div>
     </div>
