Added Problem Solving, Neuropalsticity to my blog

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     <a href="./blog/javascript-dom.html">
                         <p class="p-style small-font">JavaScript and DOM</p>
                     </a>
+                    <a href="./blog/problem-solving.html">
+                        <p class="p-style small-font">Problem Solving</p>
+                    </a>
                 </div>
             </div>
         </li>
@@ -76,6 +79,13 @@
                     </a>
                     <a href="./blog/identity-values.html">
                         <p class="p-style small-font">Identity Vlaues</p>
+                    </a>
+                    <a href="./blog/neuroplasticity.html">
+                        <p class="p-style small-font">Neuroplasticity</p>
+                    </a>
+                    <a href="./blog/te-whare-tapa-wha.html">
+                        <p class="p-style small-font">Te Whare Tapa Whā
+                        </p>
                     </a>
                 </div>
             </div>
